--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
-  "description": "food order",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "mongoose": "^8.19.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express-session": "^1.18.1",
-    "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.4",
+    "nodemon": "^3.1.10"
   }
 }
